--- a/README
+++ b/README
@@ -9,8 +9,10 @@ And
 https://stackoverflow.com/questions/40683637/how-to-create-a-c-11-non-default-constructible-allocator
 which has a link to a suggestion that microsoft has fixed this in VisualStudio:
 https://stackoverflow.com/questions/40622430/stdlistsort-why-the-sudden-switch-to-top-down-strategy
+As can be seen using Godbolt: https://godbolt.org/z/2NUSUH
 
 @kms15 sat with @EricHerman to work on the actual implmentation which can be found here.
+
 
 License
 -------
